# load-environment

./: .gitignore  README.md  collect_env.py  init_collect_env.py  install_playbook.yml  loadEnv  loadenv_requirements.txt  local_bash_rc.sh  pyproject.toml
example/dev/: file1.env
example/prod/: file2.env
