[tool.poetry]
name = "load-environment"
version = "1.0.0"
description = "Collect multiple environment fapps"
authors = ["Josef Fuchs <josef.fuchs@j-fuchs.at>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jifox/load-environment"

[tool.poetry.dependencies]
python = ">=3.7.0,<4.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"

[tool.poetry.extras]
all = ["ansible-vault"]
ansible-vault = ["ansible-vault"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
